[gd_scene load_steps=6 format=3 uid="uid://def3gbilknoxq"]

[ext_resource type="Script" path="res://structs/list/list_vertex.gd" id="1_hry7q"]
[ext_resource type="Texture2D" uid="uid://cvstya0mkgsf5" path="res://structs/sprites/vertex_default.png" id="2_k25f1"]
[ext_resource type="Texture2D" uid="uid://dy03cdb2sf711" path="res://structs/sprites/vertex_red.png" id="3_5a373"]
[ext_resource type="PackedScene" uid="uid://bjwpe2viggrq0" path="res://structs/pointers/pointer.tscn" id="4_g1k1b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lky5f"]
radius = 50.0

[node name="list_vertex" type="Area2D"]
script = ExtResource("1_hry7q")
sprite_default = ExtResource("2_k25f1")
sprite_to_remove = ExtResource("3_5a373")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lky5f")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.32, 0.32)
texture = ExtResource("2_k25f1")

[node name="label_data" type="Label" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -12.0
offset_right = 21.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "DATA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_ref_count" type="Label" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 10.5
offset_right = 21.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.254902, 0.631373, 0.270588, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="pointer" parent="." instance=ExtResource("4_g1k1b")]
visible = false

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
